syntax = "proto3";

package protocols.p2p;

// a protocol define a set of reuqest and responses
message AddPeerRequest {
    // method specific data
    string message = 1;
    // add any data here....
}

message AddPeerResponse {
    // response specific data
    bool success = 1;

    // ... add any additional message data here
}


message Collation {
    int64 shardID = 1;
    int64 period = 2;
    string blobs = 3;
}

message CollationRequest {
    int64 shardID = 1;
    int64 period = 2;
    string hash = 3;
}

message CollationResponse {
    bool success = 1;
    Collation collation = 2;
}

message NotifyShardsRequest {
    repeated int64 shardIDs = 1;
}
